# otomo_control

./: CMakeLists.txt  README.md  package.xml
config/: controllers.yaml  mapper_params_localization.yaml  mapper_params_online_async.yaml  nav2_jazzy_params.yaml  online_async_localization.yaml  online_async_mapping.yaml  twist_mux.yaml
description/: camera.xacro  colours.xacro  common_dimensions.xacro  gazebo_control.xacro  imu.xacro  lidar.xacro  robot.urdf.xacro  robot_chassis.xacro  ros2_control.xacro
launch/: controllers.launch.py  localization.launch.py  map.launch.py  nav_slam.launch.py  navigation.launch.py  navigation_launch.py  other_slam.launch.py  robot.launch.py  rsp.launch.py  slam.launch.py  slam_localization.launch.py  twist_mux.launch.py
maps/: apartment_sim_save.pgm  apartment_sim_save.yaml  apartment_sim_serial.data  living_room.data  living_room.pgm  living_room.yaml
